[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "0.1.0"
authors       = [
  "Piotr Babel <piotr@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
]
edition       = "2021"
repository    = "https://github.com/mars-protocol/liquidation-helpers"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema     = "1.2"
cosmwasm-std        = "1.2"
cw2                 = "1.0"
cw-storage-plus     = "1.0"
cw-utils            = "1.0"
# FIXME: update these once they're published to crates.io
mars-osmosis        = { version = "1.0.0", git = "https://github.com/mars-protocol/red-bank", rev = "3e57365" }
mars-red-bank-types = { version = "1.0.0", git = "https://github.com/mars-protocol/red-bank", rev = "3e57365" }
mars-testing        = { version = "1.0.0", git = "https://github.com/mars-protocol/red-bank", rev = "3e57365" }
mars-utils          = { version = "1.0.0", git = "https://github.com/mars-protocol/red-bank", rev = "3e57365" }
osmosis-std         = "0.14"
schemars            = "0.8"
serde               = { version = "1.0", default-features = false, features = ["derive"] }
thiserror           = "1.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
