[workspace]
members = ["contracts/*"]

[workspace.package]
version       = "1.0.1"
authors       = [
  "Piotr B. <piotr@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
]
edition       = "2021"
license       = "GPL-3.0-or-later"
repository    = "https://github.com/mars-protocol/liquidation-helpers"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema     = "1.3.1"
cosmwasm-std        = "1.3.1"
cw2                 = "1.1.0"
cw-storage-plus     = "1.1.0"
mars-owner          = "2.0.0"
mars-red-bank-types = { git = "https://github.com/mars-protocol/red-bank", rev = "b564988" }
mars-testing        = { git = "https://github.com/mars-protocol/red-bank", rev = "b564988" }
mars-utils          = { git = "https://github.com/mars-protocol/red-bank", rev = "b564988" }
schemars            = "0.8.12"
serde               = { version = "1.0.179", default-features = false, features = ["derive"] }
thiserror           = "1.0.44"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
