[package]
name          = "mars-liquidation-filterer"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cw2                 = { workspace = true }
cw-storage-plus     = { workspace = true }
mars-red-bank-types = { workspace = true }
mars-utils          = { workspace = true }
serde               = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
mars-testing = { workspace = true }
